Bug 777643 - re-enable arguments.length fast path in JM (r=bhackett)